--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "tabler-icons-react": "^1.56.0"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
