--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "lucide-react": "^0.439.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.56.0"
