FEAT: Products migrations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://47thabo:RnjX8KYkP2OYeE7W@cluster0.hmloz6q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://47thabo:RnjX8KYkP2OYeE7W@cluster0.hmloz6q.mongodb.net/mern-base?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=mern-base
 PORT=5000
