--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.439.0",
     "react": "^18.2.0",
@@ -10,7 +13,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
-    "tabler-icons-react": "^1.56.0"
+    "tabler-icons-react": "^1.56.0",
+    "tailwind-merge": "^2.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
