--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -14,7 +15,8 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "tabler-icons-react": "^1.56.0",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,8 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "shadcn-ui": "^0.9.2",
     "tailwindcss": "^3.3.2"
   }
 }
