--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+      "@/*": ["src/*"]
+    },
+    "module": "esnext",
+    "moduleResolution": "node"
+  },
+  "include": ["src"]
 }
