--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -39,7 +39,9 @@
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.14",
+    "customize-cra": "^1.0.0",
     "postcss": "^8.4.24",
+    "react-app-rewired": "^2.2.1",
     "shadcn-ui": "^0.9.2",
     "tailwindcss": "^3.3.2"
   }
