--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.0",
     "tabler-icons-react": "^1.56.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
