--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "migrate-mongo": "^11.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
