--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
