--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,8 @@
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.14",
     "customize-cra": "^1.0.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.48",
+    "postcss-loader": "^8.1.1",
     "react-app-rewired": "^2.2.1",
     "shadcn-ui": "^0.9.2",
     "tailwindcss": "^3.3.2"
