--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "recharts": "^2.13.0",
     "tabler-icons-react": "^1.56.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
