--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,6 +12,6 @@
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.js" } 
+      { "src": "/(.*)", "dest": "/index.js", "headers": {"Access-Control-Allow-Origin": "*"} }
     ]
   }
