--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,17 +1,26 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "src/**/*",
-        "use": "@vercel/static"
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/index.js",
+      "headers": {
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "https://mrn-b453f.vercel.app",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "X-CSRF-Token,Authorization,Content-Type,Accept,Origin,User-Agent",
+        "Access-Control-Expose-Headers": "set-cookie,CSRF-Token"
       }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.js", "headers": {"Access-Control-Allow-Origin": "https://mrn-b453f.vercel.app"} }
-    ]
-  }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ]
+}
