--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.439.0",
+    "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^10.0.0",
@@ -22,6 +23,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.0",
+    "sonner": "^1.7.0",
     "tabler-icons-react": "^1.56.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
