FIX: add routes methods >> vercel.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "methods": ["OPTIONS"],
+      "methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
       "dest": "index.js",
       "headers": {
         "Access-Control-Allow-Origin": "https://mrn-b453f.vercel.app",
