--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,10 +9,10 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
       "dest": "index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://mrn-b453f.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
         "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization, CSRF-Token",
         "Access-Control-Allow-Credentials": "true"
