--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
     "build": "babel src --out-dir dist",
-    "start:dev": "nodemon src/index.js" 
+    "start:dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +31,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
